[metadata]
name = delvewheel
version = attr: delvewheel._version.__version__
url = https://github.com/adang1345/delvewheel
author = Aohan Dang
author_email = adang1345@gmail.com
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Environment :: Console
    Development Status :: 5 - Production/Stable
    Operating System :: Microsoft :: Windows
    Topic :: Software Development
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Libraries :: Python Modules
license = MIT
description = Self-contained wheels for Windows
long_description = file: README.md
long_description_content_type = text/markdown
platforms = Windows

[options]
packages = delvewheel
install_requires =
    pefile
    machomachomangler
python_requires = >= 3.6

[options.entry_points]
console_scripts =
    delvewheel = delvewheel.__main__:main
